<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="50dp"
        android:text="@string/enterManually"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingTop="50dp"
        android:text="@string/select_exc" />

    <ListView
        android:id="@+id/exerciseListView"
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:listSelector="#cccccc"
        android:paddingLeft="45dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingRight="50dp"
        android:paddingTop="50dp" >

        <TextView
            android:id="@+id/repsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="18dp"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/repsTitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/repsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="50dp"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="88dp"
        android:gravity="left"
        android:paddingRight="50dp"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/weightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="50dp"
            android:text="Weight (kg):"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/weightData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="50dp"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="88dp"
        android:gravity="left"
        android:paddingRight="50dp"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="50dp"
            android:text="Time (secs):"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/timeData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:inputType="number"
            android:paddingRight="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/sendData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#5a72b7"
            android:gravity="center_horizontal|center_vertical"
            android:height="55dp"
            android:text="Sync Data"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>